--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       href="file:///C:/Users/user/Desktop/fontawesome-free-5.13.0-web/css/all.css"
     />
 
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="salon.css" />
     <link rel="stylesheet" href="contactusss.css" />
@@ -38,9 +40,11 @@
   <body>
     <div class="site-wrapper">
       <section id="header">
+
+
         <nav
           id="mainNavbar"
-          class="navbar navbar-dark py-0 pb-1 pt-1 fixed-top"
+          class="navbar navbar-dark pb-1 pt-1 py-0 fixed-top"
         >
           <div class="container">
             <a href="" class="navbar-brand">
@@ -295,7 +299,7 @@
 
       <div class="row m-4 justify-content-center text-center">
         <div class="hair-style style p-0 col-md-4 col-xl-3 mr-3 mb-3">
-          <img class="img-fluid" src="imgs/element53.jpg" alt="" />
+          <img class="img-fluid" src="imgs/f5d71aa42843a790f3047d48ad7373bb.jpg" alt="" />
           <div class="overlay">
             <!-- <i class="ml-3 mt-5 fas fa-camera-retro" aria-hidden="true"></i> -->
             <h3 class="ml-3 mt-5">
@@ -307,7 +311,7 @@
         <div class="hair-style style p-0 col-md-4 col-xl-3 mr-3 mb-3">
           <img
             class="img-fluid"
-            src="imgs/candice-picard-1dwRuFgDr0o-unsplash.jpg"
+            src="imgs/make-uup25.jpg"
             alt=""
           />
           <div class="overlay">
@@ -321,13 +325,13 @@
         <div class="hair-style style p-0 col-md-4 col-xl-3 mr-3 mb-3">
           <img
             class="img-fluid"
-            src="imgs/flaunter-nGKKhltw0ik-unsplash.jpg"
+            src="imgs/marble-acrylic-nails-22.jpg"
             alt=""
           />
           <div class="overlay">
             <!-- <i class="ml-3 mt-5 fas fa-camera-retro" aria-hidden="true"></i> -->
             <h3 class="ml-3 mt-5">
-              Nail Polish Services
+             Manicure Services
             </h3>
           </div>
         </div>
@@ -362,7 +366,7 @@
         <div class="hair-style style p-0 col-md-4 col-xl-3 mr-3 mb-3">
           <img
             class="img-fluid"
-            src="imgs/jordan-whitfield-faStDXKctu0-unsplash.jpg"
+            src="imgs/IMG_3209.jpg"
             alt=""
           />
           <div class="overlay">
@@ -383,7 +387,7 @@
         <div class="linn"></div>
         <div class="gallery mt-5">
           <div class="img img1">
-            <img class="img-fluid" src="imgs/86514.jpg" alt="" />
+            <img class="img-fluid" src="imgs/Virgin-City-Hair-Burmese-Curly-Hair-Raw-Collection-732x675.jpeg" alt="" />
             <div class="overlappe"></div>
           </div>
 
@@ -402,12 +406,12 @@
           </div>
 
           <div class="img img4">
-            <img class="img-fluid" src="imgs/looks22.jpg" alt="" />
+            <img class="img-fluid" src="imgs/fullhair1.jpg" alt="" />
             <div class="overlappe"></div>
           </div>
 
           <div class="img img5">
-            <img class="img-fluid" src="imgs/element53.jpg" alt="" />
+            <img class="img-fluid" src="imgs/f5d71aa42843a790f3047d48ad7373bb.jpg" alt="" />
             <div class="overlappe"></div>
           </div>
 
