new file:   image-gallery.css         modified:   index.html         modified:   salon.css

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="salon.css" />
-    <link rel="stylesheet" href="contactusss.css" />
+    <link rel="stylesheet" href="salon.css">
+    <link rel="stylesheet" href="contactusss.css">
+    <link rel="stylesheet" href="image-gallery.css">
 
     <title>Annibery Beauty Salon</title>
   </head>
@@ -121,19 +122,6 @@
                   src="imgs/86514.jpg"
                   alt="Second slide"
                 />
-
-                <!-- <div class="header-content">
-                  <h1 class="text-white">
-                    ANNIBERY HAIR & BEAUTY SALON
-                  </h1>
-                  <p class="lead text-white">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Excepturi voluptas suscipit sapiente hic. Ducimus itaque
-                    repellendus, quasi asperiores eum eos.
-                  </p>
-
-                  <a class="apisa" href="#">Book Appointment</a>
-                </div> -->
               </div>
               <div class="carousel-item">
                 <img
@@ -141,19 +129,6 @@
                   src="imgs/86531.jpg"
                   alt="Third slide"
                 />
-
-                <!-- <div class="header-content">
-                  <h1 class="text-white">
-                    ANNIBERY HAIR & BEAUTY SALON
-                  </h1>
-                  <p class="lead text-white">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Excepturi voluptas suscipit sapiente hic. Ducimus itaque
-                    repellendus, quasi asperiores eum eos.
-                  </p>
-
-                  <a class="apisa" href="#">Book Appointment</a>
-                </div> -->
               </div>
             </div>
             <a
@@ -386,7 +361,9 @@
           OUR MAGAZINE
         </h1>
         <div class="linn"></div>
+
         <div class="gallery mt-5">
+
           <div class="img img1">
             <img class="img-fluid" src="imgs/Virgin-City-Hair-Burmese-Curly-Hair-Raw-Collection-732x675.jpeg" alt="" />
             <div class="overlappe"></div>
@@ -449,13 +426,6 @@
                   do eiusmod tempor incididunt ut labore et dolore  magna aliqua. 
                   Ut enim ad minim veniam
                 </p>
-                  <!-- </div> -->
-                <!-- <p class="lead text-white">
-                  Lorem ipsum dolor sit amet, consectetur </br> adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore  magna aliqua. 
-                  Ut enim ad minim veniam, </br> quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.
-                </p> -->
               </div>
 
               <div class="col-lg-6 contact-phone text-white justify-content-end">
@@ -506,27 +476,6 @@
               </div>
             </div>
 
-            <!-- <div class="info mt-3">
-              <h2>Contact Form</h2>
-              <p class="lead text-white">interested to work with us?</p>
-
-              <form class="contact-form" action="land.html" method="post">
-                <input
-                  type="text"
-                  class="context-form-text"
-                  placeholder="Your Name"
-                />
-                <input
-                  type="text"
-                  class="context-form-text"
-                  placeholder="Your Email"
-                />
-                <span>
-                  <textarea placeholder="Your Message"></textarea>
-                </span>
-                <input type="submit" class="context-form-btn" value="Submit" />
-              </form>
-            </div> -->
           </div>
         </div>
       </div>
